--- a/_includes/contato.html
+++ b/_includes/contato.html
@@ -2,14 +2,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Entre em contato!</h2>
+                <h2 class="section-heading">Entre em contato</h2>
                 <hr class="primary">
-                <p>Deseja entrar em contato conosco?</p>
+                <p>Você pode nos seguir nas principais redes sociais!</p>
             </div>
         <div class="col-lg-4 col-lg-offset-1 text-center">
             <a href="mailto:{{ site.email }}">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.email }}</p>
+            <i class="fa fa-facebook-official fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{ site.facebook_username }}</p>
             </a>
         </div>
         <div class="col-lg-4 col-lg-offset-1 text-center">
