--- a/_includes/contato.html
+++ b/_includes/contato.html
@@ -1,21 +1,29 @@
-<section id="contato">
+<section class="bg-dark" id="contato">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Entre em contato</h2>
+                <h2 class="section-heading">Contato</h2>
                 <hr class="primary">
                 <p>Você pode nos seguir nas principais redes sociais!</p>
             </div>
-        <div class="col-lg-4 col-lg-offset-1 text-center">
-            <a href="mailto:{{ site.email }}">
+        <div class="col-lg-4 col-md-4 text-center">
+            <a href="https://facebook.com/{{ site.facebook_username }}">
             <i class="fa fa-facebook-official fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.facebook_username }}</p>
+                <!-- <p>{{ site.facebook_username }}</p> -->
+                <p> Facebook </p>
             </a>
         </div>
-        <div class="col-lg-4 col-lg-offset-1 text-center">
+        <div class="col-lg-4 col-md-4 text-center">
+            <a href="https://medium.com/{{ site.medium }}">
+            <i class="fa fa-medium fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>Blog</p>
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-4 text-center">
             <a href="https://instagram.com/{{ site.instagram_username }}">
             <i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.instagram_username }}</p>
+                <!-- <p>{{ site.instagram_username }}</p> -->
+                <p>Instagram</p>
             </a>
         </div>
 
